removed map test