@@ -104,16 +104,6 @@ task fatJar(type: Jar) {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
-// Task to run the map test
-task runMapTest(type: JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'igoat.client.MapTest'
-    jvmArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'javafx.controls,javafx.fxml,javafx.base,javafx.graphics'
-    ]
-}
-
 // Task that combines JavaDoc and JAR generation
 task 'build-cs108' {
     dependsOn javadoc
